2005-03-30  Li Yuan  <li.yuan@sun.com>

	* gui/smime-ui.glade:
	add a11y name to Certificates Table
	Fixes #73914

2005-02-21  Not Zed  <NotZed@Ximian.com>

	** See bug #68592
	
	* gui/certificate-manager.c (yourcerts_selection_changed): dont
	pass backup to handle_selection_changed.
	(certificate_manager_config_control_new): disable the backup
	buttons always.

2005-02-23  Hans Petter Jansson  <hpj@novell.com>

	* gui/component.c:
	* lib/e-cert-db.c:
	* lib/e-pkcs12.c: Include <libedataserverui/e-passwords.h>.

2005-02-09  Hans Petter Jansson  <hpj@novell.com>

	* lib/Makefile.am:
	* gui/Makefile.am: Install shared libraries to privlibdir.

2005-02-04  Rodney Dawes  <dobey@novell.com>

	* gui/ca-trust-dialog.c (ca_trust_dialog_new): Set the border widths
	for the dialog internal container widgets to be HIG compliant

	* gui/smime-ui.glade: Set the vbox spacing to 12 for HIG compliance

2004-11-23  Not Zed  <NotZed@Ximian.com>

	* gui/certificate-manager.c (delete_ca): don't remove the tree
	node if deleting the cert failed.
	(delete_your): same.
	(delete_contact): same.  Hoorah for code-reuse.

2004-10-13  JP Rosevear  <jpr@novell.com>

	* gui/e-cert-selector.c: update to use G_DEFINE_TYPE

2004-10-11  Not Zed  <NotZed@Ximian.com>

	* gui/e-cert-selector.c (e_cert_selector_new): dont try to
	deference NULL nickname or emailAddr on the cert.

2004-09-03  Not Zed  <NotZed@Ximian.com>

	** See bug #64420.

	* lib/e-pkcs12.c (prompt_for_password): set the outptr after we've
	actually got a pointer for it allocated.

2004-08-16  Not Zed  <NotZed@Ximian.com>

	** See bug #62963.

	* gui/cert-trust-dialog.c (ctd_response): fix c99 syntax. Spotted
	by Vincent Noel <vnoel@cox.net>

2004-08-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gui/certificate-manager.c: Optionally use GtkFileChooser if
	compiled against Gtk+ >= 2.4.0

2004-08-10  Not Zed  <NotZed@Ximian.com>

	* gui/component.c (smime_pk11_passwd, smime_pk11_change_passwd): 