@@ -1,3 +1,9 @@
+2005-05-06  Sankar P <psankar@novell.com>
+
+	*gui/certificate-manager.c
+	Changed cert to certificates
+	Fixes #273075
+
 2005-03-30  Li Yuan  <li.yuan@sun.com>
 
 	* gui/smime-ui.glade:
